Added skeleton to call twit and java

--- a/app/templates/project.html
+++ b/app/templates/project.html
@@ -5,7 +5,9 @@
 
   <div>badge</div>
   <img src="https://img.shields.io/badge/{{ badge }}">
-  <div> "https://img.shields.io/badge/{{ badge }}"</div>
+  <br>
+  Add this badge to your website adding this to your README.md
+  <div> [![Community](https://img.shields.io/badge/{{ badge }})]</div>
 
   <div> tweets </div>
   <ul class=tweets>
