Updated plotting section

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,7 +6,7 @@
     <dl>
       <dt>Project:
       <dd><input type=text name='project'>
-      <dd><input type=submit value=>
+      <dd><input type=submit value='search'>
     </dl>
   </form>
 
